--- a/Dev-Blog/Dev-Blog/wwwroot/css/About.css
+++ b/Dev-Blog/Dev-Blog/wwwroot/css/About.css
@@ -10,32 +10,52 @@ div[gameDescription] p {
 }
 
 /*About the creator*/
+div[creatorDescription] > div {
+    display: inline-block;
+}
+
+div[creatorDescription] li {
+    color: grey;
+}
+
+div[creatorDescription] ul {
+    list-style-type: square;
+    padding-bottom: 20px;
+}
+
 div[creatorDescription] img {
-    margin-left: 20px;
+    height: 600px;
+    width: 600px;
     border-radius: 5px;
     float: right;
-}
-
-div[creatorDescription] p {
     display: inline-block;
-    width: 60%;
 }
 
-@media screen and (max-width: 1280px) {
-    div[creatorDescription] p {
-        width: 52%;
+@media screen and (max-width: 1200px) {
+    div[creatorDescription] img {
+        height: 475px;
+        width: 475px;
     }
 }
 
 @media screen and (max-width: 992px) {
+    div[creatorDescription] > div {
+        margin: auto;
+        width: 400px;
+        display: block;
+    }
+
+    div[creatorDescription] ul {
+        text-align: left;
+    }
+
     div[creatorDescription] img {
+        height: 400px;
+        width: 400px;
         float: none;
         display: block;
         margin: auto;
-    }
-
-    div[creatorDescription] p {
         display: block;
-        width: 100%;
+        text-align: center;
     }
 }
